--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -30,8 +30,9 @@
                     <img th:src="${user.imageUrl}" alt="Фото профиля" class="img-thumbnail" width="50">
                 </td>
                 <td>
-                    <a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-info btn-sm">Редактировать</a>
-                    <a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger btn-sm"
+                    <a th:href="@{/user/edit/{id}(id=${user.id})}" class="btn btn-info btn-sm">Редактировать</a>
+
+                    <a th:href="@{/user/delete/{id}(id=${user.id})}" class="btn btn-danger btn-sm"
                        onclick="return confirm('Вы уверены, что хотите удалить пользователя?')">Удалить</a>
                 </td>
             </tr>
